# nigeriacoin

./: .gitignore  INSTALL  Makefile.am  README.md  configure.ac
contrib/: nigeriacoind.bash-completion
contrib/debian/: README.md  changelog
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-win.yml  qt-win.yml
contrib/macdeploy/: fancy.plist  macdeployqtplus
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  build-msw.md  build-osx.md  build-unix.md  coding.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  unit-tests.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-nigeriacoind-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
share/: setup.nsi.in  ui.rc
share/qt/: Info.plist.in  make_windows_icon.sh
src/: Makefile.am  Makefile.include  alert.cpp  base58.h  bitcoin-cli.cpp  bitcoind.cpp  chainparams.cpp  chainparams.h  checkpoints.cpp  clientversion.h  coins.h  core.cpp  core.h  hash.h  init.cpp  main.cpp  main.h  miner.cpp  miner.h  net.cpp  netbase.h  nigeriacoin-cli-res.rc  nigeriacoind-res.rc  noui.cpp  rpcblockchain.cpp  rpcclient.cpp  rpcclient.h  rpcdump.cpp  rpcmining.cpp  rpcmisc.cpp  rpcnet.cpp  rpcprotocol.cpp  rpcprotocol.h  rpcrawtransaction.cpp  rpcserver.cpp  rpcserver.h  rpcwallet.cpp  script.cpp  skein.cpp  sph_skein.h  (+5 more)
src/m4/: nigeriacoin_qt.m4
src/qt/: Makefile.am  addressbookpage.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  coincontroldialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  intro.cpp  nigeriacoin.qrc  notificator.cpp  notificator.h  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  paymentserver.cpp  receiverequestdialog.cpp  rpcconsole.cpp  sendcoinsdialog.cpp  sendcoinsentry.cpp  signverifymessagedialog.cpp  splashscreen.cpp  transactiondesc.cpp  transactionrecord.cpp  utilitydialog.cpp  walletmodel.cpp
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: nigeriacoin_ach.ts  nigeriacoin_af_ZA.ts  nigeriacoin_ar.ts  nigeriacoin_be_BY.ts  nigeriacoin_bg.ts  nigeriacoin_bs.ts  nigeriacoin_ca.ts  nigeriacoin_ca@valencia.ts  nigeriacoin_ca_ES.ts  nigeriacoin_cmn.ts  nigeriacoin_cs.ts  nigeriacoin_cy.ts  nigeriacoin_da.ts  nigeriacoin_de.ts  nigeriacoin_de_AT.ts  nigeriacoin_el_GR.ts  nigeriacoin_en.ts  nigeriacoin_eo.ts  nigeriacoin_es.ts  nigeriacoin_es_CL.ts  nigeriacoin_es_DO.ts  nigeriacoin_es_MX.ts  nigeriacoin_es_UY.ts  nigeriacoin_et.ts  nigeriacoin_eu_ES.ts  nigeriacoin_fa.ts  nigeriacoin_fa_IR.ts  nigeriacoin_fi.ts  nigeriacoin_fr.ts  nigeriacoin_fr_CA.ts  nigeriacoin_gl.ts  nigeriacoin_gu_IN.ts  nigeriacoin_he.ts  nigeriacoin_hi_IN.ts  nigeriacoin_hr.ts  nigeriacoin_hu.ts  nigeriacoin_id_ID.ts  nigeriacoin_it.ts  nigeriacoin_ja.ts  nigeriacoin_ka.ts  (+31 more)
src/qt/res/: nigeriacoin-qt-res.rc
src/qt/res/icons/: nigeriacoin.icns  nigeriacoin_testnet.icns
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: Makefile.am  main_tests.cpp
